--- a/html/Index.html
+++ b/html/Index.html
@@ -7,38 +7,43 @@
 </head>
 <body>
 
-<div class="navigation">
-    <a class="nav" href="help.php">Help
-        <img src="../img/help.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home" position=left>
-    </a>
+    <div class="navigation">
+        <a class="nav" href="help.php">Help
+            <img src="../img/help.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+                 position=left>
+        </a>
 
-    <a class="nav" href="products.php">Products
-        <img src="../img/products.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home" position=left>
-    </a>
+        <a class="nav" href="products.php">Products
+            <img src="../img/products.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+                 position=left>
+        </a>
 
-    <a class="nav" href="Login.php">Login
-        <img src="../img/login.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home" position=left>
-    </a>
+        <a class="nav" href="Login.php">Login
+            <img src="../img/login.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+                 position=left>
+        </a>
 
-    <a class="nav" href="index.php">Home
-        <img src="../img/home.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home" position=left>
-    </a>
+        <a class="nav" href="index.php">Home
+            <img src="../img/home.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+                 position=left>
+        </a>
 
-    <a href="index.php">
-        <img src="../img/logo%20aniverse.png" class="logo" width=8% alt="Logo"/>
-    </a>
-</div>
+        <a href="index.php">
+            <img src="../img/logo%20aniverse.png" class="logo" width=8% alt="Logo"/>
+        </a>
+    </div>
 
-<div class="second_navigation">
-    <ul id="second_nav">
-        <li><a href="#">DVD</a></li>
-        <li><a href="#">Manga</a></li>
-        <li><a href="#">Figures</a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="#">Accessories</a></li>
-    </ul>
+    <div class="second_navigation">
+        <ul id="second_nav">
+            <li><a href="#">DVD</a></li>
+            <li><a href="#">Manga</a></li>
+            <li><a href="#">Figures</a></li>
+            <li><a href="#">Games</a></li>
+            <li><a href="#">Accessories</a></li>
+        </ul>
+    </div>
 
-</div>
+    <svg width="100%" height="100%" id="curve" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><path d="M 0,400 C 0,400 0,200 0,200 C 66.45933014354068,180.33492822966508 132.91866028708137,160.66985645933013 241,167 C 349.08133971291863,173.33014354066987 498.78468899521533,205.6555023923445 613,215 C 727.2153110047847,224.3444976076555 805.9425837320574,210.7081339712919 876,201 C 946.0574162679426,191.2918660287081 1007.4449760765551,185.51196172248802 1100,186 C 1192.5550239234449,186.48803827751198 1316.2775119617224,193.244019138756 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="#7918feff" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path></svg>
 
 </body>
 </html>
