--- a/html/Index.html
+++ b/html/Index.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <title>Aniverse</title>
     <link rel="stylesheet" href="../css/default.css">
+    <script src="../js/slideshow.js"></script>
 </head>
 <body>
 
     <div class="navigation">
         <a class="nav" href="help.php">Help
-            <img src="../img/help.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+            <img src="../img/icons/help.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
                  position=left>
         </a>
 
         <a class="nav" href="products.php">Products
-            <img src="../img/products.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+            <img src="../img/icons/products.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
                  position=left>
         </a>
 
         <a class="nav" href="Login.php">Login
-            <img src="../img/login.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+            <img src="../img/icons/login.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
                  position=left>
         </a>
 
-        <a class="nav" href="index.php">Home
-            <img src="../img/home.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
+        <a class="nav" href="Index.html">Home
+            <img src="../img/icons/home.png" align=left style="width:25px;height:25px;margin-right:5px;" class="home"
                  position=left>
         </a>
 
-        <a href="index.php">
+        <a href="Index.html">
             <img src="../img/logo%20aniverse.png" class="logo" width=8% alt="Logo"/>
         </a>
     </div>
@@ -43,7 +44,47 @@
         </ul>
     </div>
 
-    <svg width="100%" height="100%" id="curve" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><path d="M 0,400 C 0,400 0,200 0,200 C 66.45933014354068,180.33492822966508 132.91866028708137,160.66985645933013 241,167 C 349.08133971291863,173.33014354066987 498.78468899521533,205.6555023923445 613,215 C 727.2153110047847,224.3444976076555 805.9425837320574,210.7081339712919 876,201 C 946.0574162679426,191.2918660287081 1007.4449760765551,185.51196172248802 1100,186 C 1192.5550239234449,186.48803827751198 1316.2775119617224,193.244019138756 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="#7918feff" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path></svg>
+    <div class="slidecontainer"> <!-- creates target for CSS -->
+        <img name="slide" width="100%" height="100%" /> <!-- creates container for images, sets them to window size -->
+        <div id="changeText" class="textindicator"></div>
+
+        <script> /* script tags required for javascript to work*/
+        let i = 0; /* start point for image array */
+        const images = []; /* empty array for images */
+        const time = 4000; /* timer in millisecnds so 4000 is 4 seconds */
+
+        images[0] = "../img/promotions/promotion 1.jpg"; /* all the images in the array */
+        images[1] = "../img/promotions/promotion 2.jpg"; /* has to start at 0 (0 is the first image) */
+        images[2] = "../img/promotions/promotion 3.jpg";
+
+        function changeImg(){
+            document.slide.src = images[i]; /* this will grab the source images from
+    the array that will be cycled through */
+
+            if(i < images.length - 1){ /* if statement checks array length */
+                i++;   /* if i is less than 2 then increment i */
+            } else {  /* else reset the loop back to 0 */
+                i = 0;
+            }
+            setTimeout("changeImg()", time); /* sets the timer from variable time */
+        }
+        const text = ["1/3", "2/3", "3/3"]; /* array with the different strings that are used */
+        let counter = 0; /* start point for text */
+        const elem = document.getElementById("changeText"); /* variable that gets value from html element */
+        /* the images change after every 4 seconds
+       so I set the text to change after every 4 seconds */
+
+        function change() {
+            elem.innerHTML = text[counter]; /* gets first text based on counter */
+            counter++;  /* adds 1 to the counter value */
+            if (counter >= text.length) {  /* resets the text so it loops again */
+                counter = 0; /* value set to 0 so it loops */
+            }
+            setTimeout("change()", time);
+        }
+        window.addEventListener("load", changeImg); window.addEventListener("load", change);
+        </script> <!-- end of javascript -->
+    </div>
 
 </body>
 </html>
